tests/fails/f25.t
require("fail")

terra foo()
    var a,b,c = 3,4
end
foo()
